fix(stats): スレッド枠上限の Java 既定値と出荷 yml の drift を塞ぐ(F2)
ThreadSlotPolicy#applyCategoryCap は cap<=0 のとき thread-slots をマップから
【キーごと削除する】設計なので、Java 既定(weapon/tool/other=0)と出荷 yml(=5)が
ずれていても 0 の側では矛盾が表に出ない。出荷 yml が 5 になった瞬間に ItemAssembler が
lore を焼き、非防具 78 件が「スレッド枠 N枠と表示されるのに装着 GUI も効果も無い飾り」に
なっていた(ユーザー報告 F2 の実体)。

- 既定値を出荷 yml と同じ全カテゴリ 5 へ揃え、単一定数
  CraftingFeaturesConfig#DEFAULT_THREAD_SLOT_CAP に寄せた(フィールド初期値と
  loadThreadSlots の seed で 2 箇所に散っていたのも統合)。
- 新設 ShippedThreadSlotCapDriftTest: 出荷 yml の bytes をそのまま読んで
  パースし、既定値との一致と「防具・武器・ツール・触媒(other)すべてが
  thread-slots を保持する」ことを機構経由で突き合わせる。
  既存の ThreadSlotPolicyTest / DerivedItemStatsThreadSlotTest は上限マップを
  テスト内定数でハードコードしており出荷 yml を読んでいなかったため、
  この drift が構造的に検出不能だった —— 責務を分けて両方に注記した。
- ItemFactoryTest: 「スレッド枠拡張の儀式」が武器・触媒・ツール・防具すべてで
  成立し累計カウンタが +1 されること、儀式自身の max-slots で止まることを追加。

TrinityForge の public API は変更していない(DEFAULT_THREAD_SLOT_CAP は
package-private、threadSlotMaxByCategory() のシグネチャは不変)ので
フォーク用 libs/TrinityForge.jar の再生成は不要。

テスト: 2961 tests / 0 failures / 0 errors / 2 skipped